src/main/kotlin/com/example/kopring/global/error/exception/BaseException.kt
import com.example.kopring.global.error.ErrorCode

open class BaseException(val errorCode: ErrorCode) : RuntimeException() {
}